# emojibot

./: .env.example  Dockerfile  README.md  compose-dev.yaml  compose.yaml  pyproject.toml
cogs/: emoji.py
emojibot/: __main__.py  bot.py
emojibot/cogs/: hotreload.py  misc.py
